# auto_redteam

./: .gitignore  README.md  main.py  pyproject.toml  seeds.json  test_execution.py  test_judge.py  test_llm.py
agents/: analyst.py  critic.py  hacker.py  judge.py  mastermind.py  planner.py
core/: executor.py  llm.py  memory.py  utils.py
ideas/: chatgpt.md  context.md  gemini.md  mine.md  ours.md  plan.md
logs/: attempts_db.jsonl
prompts/: computer_use_api.md
sandbox/: browser_logs.txt  exploit_0aac5bbc-384e-4cd3-a9de-628c0450884e.py  exploit_1778429085800.py  exploit_198098b4-6a98-4730-b2c1-996b1656b12e.py  exploit_3ec9027b-9779-4944-9ff9-56eea51a6e91.py  exploit_69654610-112d-45dc-9923-e789e88e839a.py  exploit_7fd931cf-7d44-4121-831f-8a0b75c2eb06.py  exploit_977224c3-43f0-4fd7-848a-8eb9ed1c2fbd.py  exploit_dac60a50-59e9-4b04-89ab-d519abc51f3f.py  exploit_ec243218-23f7-4eca-b480-52ca904410fd.py  exploit_ef7cbad1-ae3a-4846-a1ba-cef417aae83c.py
sandbox/artifacts_0aac5bbc-384e-4cd3-a9de-628c0450884e/: browser_logs.txt
sandbox/artifacts_dac60a50-59e9-4b04-89ab-d519abc51f3f/: browser_logs.txt
sandbox/artifacts_ef7cbad1-ae3a-4846-a1ba-cef417aae83c/: browser_logs.txt
tests/: conftest.py  test_agents.py  test_executor.py  test_memory.py
