[project]
name = "auto-redteam"
version = "0.1.0"
description = ""
authors = [
    {name = "Matthias Lehmann",email = "matthiaslehmann@MacBook-Pro.com"}
]
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
