[project]
name = "auto-redteam"
version = "0.1.0"
description = ""
authors = [
    {name = "Matthias Lehmann",email = "matthiaslehmann@MacBook-Pro.com"}
]
requires-python = ">=3.13"
dependencies = [
    "openai (>=2.36.0,<3.0.0)",
    "playwright (>=1.60.0,<2.0.0)",
    "websockets (>=16.0,<17.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "requests (>=2.34.2,<3.0.0)",
    "aiohttp (>=3.14.0,<4.0.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "lxml (>=6.1.1,<7.0.0)",
    "faker (>=40.20.0,<41.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-mock (>=3.15.1,<4.0.0)"
]
